--- a/stb/core/templates/applications.html
+++ b/stb/core/templates/applications.html
@@ -39,19 +39,34 @@
         <div class="scrollbar-sidebar">
             <div class="app-sidebar__inner">
                 <ul class="vertical-nav-menu">
-                    <li class="app-sidebar__heading">Project Needs</li>
-                    <li>
-                        <a class="mm-actived">
-                            <i class="metismenu-icon pe-7s-rocket"></i>
-                            All
-                        </a>
+                    <li class="app-sidebar__heading">Status</li>
+                    <li><a href="{% url 'applications-status' 'new-applications' %}">
+                        <i class="metismenu-icon pe-7s-rocket"></i>New Applications</a>
                     </li>
+                    <li><a href="{% url 'applications-status' 'accepted' %}">
+                        <i class="metismenu-icon pe-7s-rocket"></i>Accepted</a>
+                    </li>
+                    <li><a href="{% url 'applications-status' 'rejected' %}">
+                        <i class="metismenu-icon pe-7s-rocket"></i>Rejected</a>
+                    </li>
+                </ul>
+                <ul class="vertical-nav-menu">
+                    <li class="app-sidebar__heading">My Projects</li>
+                    <li><a href="{% url 'applications' %}">
+                        <i class="metismenu-icon pe-7s-rocket"></i>All Projects</a>
+                    </li>
+                    {% for project in projects %}
+                    <li><a href="{% url 'applications-project' project.id %}">
+                        <i class="metismenu-icon pe-7s-rocket"></i>{{ project.title }}</a>
+                    </li>
+                    {% endfor %}
+                </ul>
+                <ul class="vertical-nav-menu">
+                    <li class="app-sidebar__heading">Project Needs</li>
+                    <li><a class="selected" href="{% url 'applications' %}">All Needs</a></li>
                     {% for position in positions %}
-                    <li>
-                        <a href="{% url 'project-needs' position.id %}">
-                            <i class="metismenu-icon pe-7s-rocket"></i>
-                            {{ position }}
-                        </a>
+                    <li><a href="{% url 'applications-position' position.id %}">
+                        <i class="metismenu-icon pe-7s-rocket"></i>{{ position.title }}</a>
                     </li>
                     {% endfor %}
                 </ul>
@@ -67,8 +82,8 @@
                             <i class="pe-7s-car icon-gradient bg-mean-fruit">
                             </i>
                         </div>
-                        <div>Projects
-                            <div class="page-title-subheading">Projects available to apply to.
+                        <div>Applications
+                            <div class="page-title-subheading">List of all developers applied to my projects.
                             </div>
                         </div>
                     </div>
@@ -90,37 +105,45 @@
                             <table class="align-middle mb-0 table table-borderless table-striped table-hover">
                                 <thead>
                                     <tr>
-                                        <th class="text-center">Project ID #</th>
-                                        <th>Project Title</th>
-                                        <th class="text-center">Project Needs</th>
-                                        <th class="text-center">Action</th>
+                                        <th class="text-center">Applicant ID #</th>
+                                        <th>Applicant</th>
+                                        <th class="text-center">Applicant Position</th>
+                                        <th class="text-center">Status</th>
+                                        <th class="text-center">Applicant's Profile</th>
                                     </tr>
                                 </thead>
                                 <tbody>
-                                {% for project in projects %}
+                                {% for key, value in applicant_dict.items %}
                                 <tr>
-                                    <td class="text-center text-muted">#{{ project.id }}</td>
+                                    <td class="text-center text-muted">#{{ value.0.users.id }}</td>
                                     <td>
                                         <div class="widget-content p-0">
                                             <div class="widget-content-wrapper">
-                                                <div class="widget-content-left mr-3">
-                                                    <div class="widget-content-left">
-                                                        <img width="40" class="rounded-circle" src="assets/images/avatars/4.jpg" alt="">
-                                                    </div>
-                                                </div>
                                                 <div class="widget-content-left flex2">
-                                                    <div class="widget-heading">{{ project.title }}</div>
+                                                    <div class="widget-heading">
+                                                        {{ value.0 }}
+                                                        <p>{{ value.1.title }}</p>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
                                     </td>
                                     <td class="text-center">
-                                        {% for position in project.positions.all %}
-                                            {{ position }}{% if forloop.last %}{% else %}, {% endif %}
-                                        {% endfor %}
+                                        {{ value.2.title }} - {{ value.2.id }}
                                     </td>
                                     <td class="text-center">
-                                        <button onclick="window.location.href = '{% url "project" project.id %}';" type="button" id="PopoverCustomT-1" class="btn btn-primary btn-sm">Details</button>
+                                        {% if value.3 == 0 %}
+                                        {{ value.3 }}
+                                        <button onclick="window.location.href = '{% url "applicant-accepted" value.0.users.id value.2.id %}';" class="mb-2 mr-2 btn btn-info">Hire Developer</button>
+                                        {% elif value.3 == 1 %}
+                                        {{ value.3 }}
+                                        <button class="mb-2 mr-2 btn btn-success disabled">Developer Hired</button>
+                                        {% else %}
+                                        <button class="mb-2 mr-2 btn btn-danger disabled">Developer Rejected</button>
+                                        {% endif %}
+                                    </td>
+                                    <td class="text-center">
+                                        <button onclick="window.location.href = '';" type="button" id="PopoverCustomT-1" class="btn btn-primary btn-sm">Details</button>
                                     </td>
                                 </tr>
                                 {% endfor %}
